--- a/flaskLogin/templates/index.html
+++ b/flaskLogin/templates/index.html
@@ -1,22 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Flask Intro</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Welcome to Flask!</h1>
-      <br>
-      <p>Click <a href="/logout">here</a> to logout.</p>
-      {% for message in get_flashed_messages() %}
-        {{ message }}
-      {% endfor %}
-    </div>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+
+	<h1>Welcome to Flask!</h1>
+	<br>
+	<p>Click <a href="/logout">here</a> to logout.</p>
+
+{% endblock %}
