--- a/flask_shopsmart/templates/index.html
+++ b/flask_shopsmart/templates/index.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<div class="row" style="margin-top:15px;">
 				<div class="col-md-10">
-				<img src="shopsmart_logo.PNG">
+				<img src="../../shopsmart_logo.PNG">
 
 				</div>
 				<div class="col-md-1">
@@ -38,7 +38,7 @@
 
 		<hr style="border:1.3px black solid">	
 
-	 	<div class="container" style="background:url('background2.jpg');">
+	 	<div class="container" style="background:url('../../background2.jpg');">
 		 	<div class="website_name" >
 		 			<h1 align="center" style="margin-top:50px; font-size:75px;font-family:monospace;"><b>ShopSmart</b></h1>
 		 	</div>
@@ -85,7 +85,7 @@
     </div>
 
     <div class="col-md-4">
-    	<img src="discount.jpg">
+    	<img src="../../discount.jpg">
     </div>
     </div>
     </div>
@@ -102,7 +102,7 @@
     			<div class="category">
     				<img src="">
     				<a href="#">
-    				<img src="electronics.jpg">
+    				<img src="../../electronics.jpg">
     				<h1>Electronics</h1>
     				</a>
     			</div>
@@ -112,7 +112,7 @@
     		<div class="col-sm-3 col-md-3">
 				<div class="category">
     				<a href="#">
-    				<img src="books.jpg">
+    				<img src="../../books.jpg">
     				<h1>Books</h1>
     				</a>
     			</div>    			
@@ -121,7 +121,7 @@
     		<div class="col-sm-3 col-md-3">
     			<div class="category">
     				<a href="#">
-    				<img src="clothes.jpg">
+    				<img src="../../clothes.jpg">
     				<h1>Clothes</h1>
     				</a>
     			</div>
@@ -130,7 +130,7 @@
     		<div class="col-sm-3 col-md-3">
     			<div class="category">
     				<a href="#">
-    				<img src="furniture.jpg">
+    				<img src="../../furniture.jpg">
     				<h1>Furniture</h1>
     				</a>
     			</div>
@@ -143,7 +143,7 @@
     		<div class="col-sm-3 col-md-3">
     			<div class="category">
     				<a href="#">
-    				<img src="sports.jpg">
+    				<img src="../../sports.jpg">
     				<h1>Sports</h1>
     				</a>
     			</div>
@@ -153,7 +153,7 @@
     		<div class="col-sm-3 col-md-3">
 				<div class="category">
     				<a href="#">
-    				<img src="watches.jpg">
+    				<img src="../../watches.jpg">
     				<h1>Watches</h1>
     				</a>
     			</div>    			
@@ -162,7 +162,7 @@
     		<div class="col-sm-3 col-md-3">
     			<div class="category">
     				<a href="#">
-    				<img src="stationary.jpg">
+    				<img src="../../stationary.jpg">
     				<h1>Stationary</h1>
     				</a>
     			</div>
@@ -171,7 +171,7 @@
     		<div class="col-sm-3 col-md-3">
     			<div class="category">
     				<a href="#">
-    				<img src="Lights.jpg">
+    				<img src="../../Lights.jpg">
     				<h1>Lights</h1>
     				</a>
     			</div>
@@ -225,7 +225,7 @@
 			         <a href="https://twitter.com/ledmartindia"><img src="webicon-twitter-m.png" alt="led lights"></a>&nbsp&nbsp&nbsp
       
 	        </h3>
-	        <img src="shopsmart_logo.PNG" style="margin-top:20px;margin-left:70px;">
+	        <img src="../shopsmart_logo.PNG" style="margin-top:20px;margin-left:70px;">
 
 		    </div>					    
 
