--- a/flask_shopsmart/templates/signin.html
+++ b/flask_shopsmart/templates/signin.html
@@ -1,26 +1,34 @@
 {% extends "base_forms.html" %}
  
 {% block content %}
-  <h2>Sign In</h2>
- 
-  {% for message in form.email.errors %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
+  
+  <div class="container">
+    
+    <h2>Sign In</h2>
    
-  {% for message in form.password.errors %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-   
-  <form action='{{ url_for('signin') }}' method="POST">
-    {{ form.hidden_tag() }}
+    {% for message in form.email.errors %}
+      <div class="flash">{{ message }}</div>
+    {% endfor %}
      
-    {{ form.email.label }}
-    {{ form.email }}
-     <br><br>
-    {{ form.password.label }}
-    {{ form.password }}
+    {% for message in form.password.errors %}
+      <div class="flash">{{ message }}</div>
+    {% endfor %}
      
-    {{ form.submit }}
-  </form>
+    <form action='{{ url_for('signin') }}' method="POST">
+      {{ form.hidden_tag() }}
+      
+      {{ form.email.label }}
+      &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+      {{ form.email }}
+       <br><br>
+      {{ form.password.label }}
+      &nbsp&nbsp&nbsp&nbsp
+      {{ form.password }}
+       <br><br>
+       &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+      {{ form.submit }}
+    </form>
+
+    </div>
      
 {% endblock %}
