--- a/flask_shopsmart/templates/signup.html
+++ b/flask_shopsmart/templates/signup.html
@@ -2,51 +2,63 @@
 
 {% block content %}
 	
-	<h2>Signup</h2>
-
-	{% for message in form.firstname.errors %}
-		<div class="flash">{{message}} </div>
-	{% endfor %}
-
-	{% for message in form.lastname.errors %}
-		<div class="flash">{{message}} </div>
-	{% endfor %}
-
-	{% for message in form.email.errors %}
-		<div class="flash">{{message}} </div>
-	{% endfor %}
-
-	{% for message in form.password.errors %}
-		<div class="flash">{{message}} </div>
-	{% endfor %}
-
-	<form action='{{url_for('signup')}}' method="POST">
+	<div class="container">
 		
-		{{ form.hidden_tag() }}
+		<h2>Signup</h2>
 
-		{{ form.firstname.label }}
-		&nbsp&nbsp
-		{{ form.firstname }}
-		<br><br>
+		{% for message in form.firstname.errors %}
+			<div class="flash">{{message}} </div>
+		{% endfor %}
 
-		{{ form.lastname.label }}
-		&nbsp&nbsp
-		{{ form.lastname }}
-		<br><br>
+		{% for message in form.lastname.errors %}
+			<div class="flash">{{message}} </div>
+		{% endfor %}
 
-		{{ form.email.label }}
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-		{{ form.email }}
-		<br><br>
+		{% for message in form.email.errors %}
+			<div class="flash">{{message}} </div>
+		{% endfor %}
 
-		{{ form.password.label }}
-		&nbsp&nbsp
-		{{ form.password }}
-		<br><br>
+		{% for message in form.password.errors %}
+			<div class="flash">{{message}} </div>
+		{% endfor %}
 
-		{{ form.submit}}
+		{% for message in form.address.errors %}
+			<div class="flash">{{message}} </div>
+		{% endfor %}
 
-	</form>
+		<form action='{{url_for('signup')}}' method="POST">
+			
+			{{ form.hidden_tag() }}
+
+			{{ form.firstname.label }}
+			&nbsp&nbsp
+			{{ form.firstname }}
+			<br><br>
+
+			{{ form.lastname.label }}
+			&nbsp&nbsp
+			{{ form.lastname }}
+			<br><br>
+
+			{{ form.email.label }}
+			&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+			{{ form.email }}
+			<br><br>
+
+			{{ form.password.label }}
+			&nbsp&nbsp
+			{{ form.password }}
+			<br><br>
+
+			{{ form.address.label }}
+			&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+			{{ form.address }}
+			<br><br>		
+
+			{{ form.submit}}
+
+		</form>
+	</div>
 
 {% endblock %}
 
